--- a/package.json
+++ b/package.json
@@ -14,10 +14,9 @@
   "dependencies": {
     "@types/js-yaml": "^4.0.9",
     "axios": "^1.7.7",
-    "crypto": "^1.0.1",
-    "fs": "^0.0.1-security",
     "https-proxy-agent": "^7.0.5",
     "js-yaml": "^4.1.0",
+    "web3": "^4.12.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
