--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.7",
     "https-proxy-agent": "^7.0.5",
     "js-yaml": "^4.1.0",
+    "p-limit": "^6.1.0",
     "web3": "^4.12.1",
     "xlsx": "^0.18.5"
   },
